--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,12 @@ name = "arduino-spi"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+board-selected = []
+mcu-atmega = []
+atmega2560 = ["mcu-atmega", "board-selected", "atmega-hal/atmega2560"]
+atmega328p = ["mcu-atmega", "board-selected", "atmega-hal/atmega328p"]
+
 
 [dependencies]
 nb = "0.1.2"
@@ -20,13 +25,12 @@ git = "https://github.com/mutantbob/avr-hal.git"
 branch="2022-mar-ufmt-fix"
 #path="../../../vendor/avr-hal/avr-hal-generic"
 
-[dependencies.arduino-hal]
+[dependencies.atmega-hal]
 #git = "https://github.com/rahix/avr-hal"
 #rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
 git = "https://github.com/mutantbob/avr-hal.git"
 branch="2022-mar-ufmt-fix"
-#path="../../../vendor/avr-hal/arduino-hal"
-features = ["arduino-uno"]
+#path="../../../vendor/avr-hal/atmega-hal"
 
 [dependencies.void]
 version = "1.0.2"
