--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,17 +19,17 @@ version = "0.2.3"
 features = ["unproven"]
 
 [dependencies.avr-hal-generic]
-#git = "https://github.com/rahix/avr-hal"
-#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
-git = "https://github.com/mutantbob/avr-hal.git"
-branch="2022-mar-ufmt-fix"
+git = "https://github.com/rahix/avr-hal"
+rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
+#git = "https://github.com/mutantbob/avr-hal.git"
+#branch="2022-mar-ufmt-fix"
 #path="../../../vendor/avr-hal/avr-hal-generic"
 
 [dependencies.atmega-hal]
-#git = "https://github.com/rahix/avr-hal"
-#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
-git = "https://github.com/mutantbob/avr-hal.git"
-branch="2022-mar-ufmt-fix"
+git = "https://github.com/rahix/avr-hal"
+rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
+#git = "https://github.com/mutantbob/avr-hal.git"
+#branch="2022-mar-ufmt-fix"
 #path="../../../vendor/avr-hal/atmega-hal"
 
 [dependencies.void]
