--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,17 +20,13 @@ features = ["unproven"]
 
 [dependencies.avr-hal-generic]
 git = "https://github.com/rahix/avr-hal"
-rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
-#git = "https://github.com/mutantbob/avr-hal.git"
-#branch="2022-mar-ufmt-fix"
-#path="../../../vendor/avr-hal/avr-hal-generic"
+rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
+#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
 
 [dependencies.atmega-hal]
 git = "https://github.com/rahix/avr-hal"
-rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
-#git = "https://github.com/mutantbob/avr-hal.git"
-#branch="2022-mar-ufmt-fix"
-#path="../../../vendor/avr-hal/atmega-hal"
+rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
+#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
 
 [dependencies.void]
 version = "1.0.2"
